--- a/sys-manage/src/main/resources/application-dev.yml
+++ b/sys-manage/src/main/resources/application-dev.yml
@@ -6,7 +6,7 @@ spring:
         enabled: true
         url-pattern: /*
         # 需要过滤druid的访问地址
-        exclusions: '*.js,*.gif,*.jpg,*.png,*.css,*.ico,/auth/druid/*'
+        exclusions: '*.js,*.gif,*.jpg,*.png,*.css,*.ico,/manage/druid/*'
       # 配置 stat-view-servlet
       stat-view-servlet:
         enabled: true
