--- a/sys-manage/src/main/resources/application.yml
+++ b/sys-manage/src/main/resources/application.yml
@@ -12,6 +12,9 @@ spring:
     active: dev
   application:
     name: manage
+  config:
+    import:
+      - "optional:classpath:h-${spring.profiles.active}.yml"
   # Servlet 配置
   servlet:
     # 文件上传相关配置项
