--- a/sys-manage/pom.xml
+++ b/sys-manage/pom.xml
@@ -7,7 +7,7 @@
         <groupId>com.haohaodayouxi</groupId>
         <artifactId>lib-boot</artifactId>
         <version>1.0.0-21-SNAPSHOT</version>
-        <relativePath />
+        <relativePath/>
     </parent>
 
     <artifactId>sys-manage</artifactId>
@@ -18,6 +18,7 @@
         <lib-db.version>1.0.0-21-SNAPSHOT</lib-db.version>
         <common-core.version>1.0.0-21-SNAPSHOT</common-core.version>
         <common-redis.version>1.0.0-21-SNAPSHOT</common-redis.version>
+        <common-file-util.version>1.0.0-21-SNAPSHOT</common-file-util.version>
     </properties>
 
     <dependencies>
@@ -36,6 +37,11 @@
             <groupId>com.haohaodayouxi</groupId>
             <artifactId>common-redis</artifactId>
             <version>${common-redis.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.haohaodayouxi</groupId>
+            <artifactId>common-file-util</artifactId>
+            <version>${common-file-util.version}</version>
         </dependency>
         <dependency>
             <groupId>cn.hutool</groupId>
