--- a/sys-manage/src/main/resources/h-dev.yml
+++ b/sys-manage/src/main/resources/h-dev.yml
@@ -4,3 +4,5 @@ h:
     version: "1.0.0"
     base-package: "com.haohaodayouxi.manage"
     parent-package: "com.haohaodayouxi"
+  file-os:
+    enable: true
