--- a/sys-manage/src/main/resources/h-dev.yml
+++ b/sys-manage/src/main/resources/h-dev.yml
@@ -6,3 +6,7 @@ h:
     parent-package: "com.haohaodayouxi"
   file-os:
     enable: true
+    sliceSize: 5242880
+    downloadTaskMaxSize: 5
+    videoCoverWith: 300
+    videoCoverFormat: "png"
