--- a/sys-manage/sys/sys-service/src/main/resources/h-dev.yml
+++ b/sys-manage/sys/sys-service/src/main/resources/h-dev.yml
@@ -4,6 +4,9 @@ h:
     version: "1.0.0"
     base-package: "com.haohaodayouxi.manage"
     parent-package: "com.haohaodayouxi"
+#  sys:
+#    auth:
+#      skipApiCheck: false
   file-os:
     enable: true
     sliceSize: 5242880
